--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "cookie-parser": "^1.4.5",
     "env-paths": "^2.2.0",
     "express": "^5.0.0-alpha.8",
+    "firebase": "^8.2.1",
     "fs-extra": "^9.0.1",
     "http-proxy": "^1.18.0",
     "httpolyglot": "^0.1.2",
